fp4: accessiblity - fixed button contrast

--- a/final-project/styles/tabs.css
+++ b/final-project/styles/tabs.css
@@ -157,7 +157,7 @@
 
 .sequencer-play-label {
   font-size: var(--font-size-sm);
-  font-weight: 500;
+  font-weight: 600;
   color: var(--color-white);
   line-height: 0px;
   padding-top: 8px;
