--- a/final-project/styles/variables.css
+++ b/final-project/styles/variables.css
@@ -91,7 +91,7 @@
     inset -1px -1px 1px var(--color-shadow-dark-50);
 
   /* Button base colors */
-  --btn-orange-bg: #f05a22;
+  --btn-orange-bg: #ef4f15;
   --btn-orange-active: #ee5529;
   --btn-orange-light: #ffb147;
   --btn-orange-dark: #d72d12;
